--- a/doc/4.ffmpeg解码视频为yuv数据.md
+++ b/doc/4.ffmpeg解码视频为yuv数据.md
@@ -98,7 +98,7 @@ graph TB
 
 如果打开的url是网络流需要先调用`avformat_network_init()` 初始化网络环境。
 
-完整代码可见[[https://github.com/shizheng163/MyMediaPlayer/tree/v0.3.0]]([https://github.com/shizheng163/MyMediaPlayer/tree/v0.3.0])
+完整代码可见[https://github.com/shizheng163/MyMediaPlayer/tree/v0.3.0](https://github.com/shizheng163/MyMediaPlayer/tree/v0.3.0)
 .h 文件
 
 ```c++
@@ -408,3 +408,4 @@ void FFDecoder::decodeInThread()
 
 - [ffmpeg简易播放器的实现-完善版](https://www.lmlphp.com/user/901/article/item/13844)
 - [QT+ffmpeg 简单视频播放代码及问题记录](https://blog.csdn.net/Chasing_Chasing/article/details/78824299)
+- [FFmpeg——视频解码——转YUV并输出——av_image函数介绍](https://blog.csdn.net/weixin_42881084/article/details/82427759)
